fix: multi-instance review round 2 — token leak, init lock retry, probe rotation, storm reduction, generation guard